/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.7/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'java'
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    id 'jacoco'
    id 'com.github.sherter.google-java-format' version '0.9'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit Jupiter for testing.
    testImplementation(platform('org.junit:junit-bom:5.14.0'))
    testImplementation('org.junit.jupiter:junit-jupiter')

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // This dependency is used by the application.
    implementation libs.guava
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.soft2412.vsas.App'
}

tasks.named('run', JavaExec) {
    // Keep the interactive shell attached to the invoking console.
    standardInput = System.in
}

googleJavaFormat {
    toolVersion = "1.1"
}

tasks.named('test', Test) {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
    finalizedBy(tasks.named('jacocoTestReport'))
}

jacocoTestReport {
    reports {
        xml.required = true
        html.required = true
    }
}

// Ensure runnable manifest and produce fat JAR with classifier "-all"
jar {
    manifest {
        attributes('Main-Class': application.mainClass.get())
    }
}

tasks.named('shadowJar') {
    archiveClassifier.set('all')
}
